Fix absolute paths for additional input data

--- a/examples/pcrglobwb.ipynb
+++ b/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "268e3f66",
+   "id": "7ebf5ab2",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb32a7d",
+   "id": "d4ecb65c",
    "metadata": {
     "tags": []
    },
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "217e1c1b",
+   "id": "61780d2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b12e0f83",
+   "id": "39aa25e3",
    "metadata": {},
    "source": [
     "This notebook uses the following docker and/or singularity images. Make sure these are present on the system:\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e172d21",
+   "id": "9ad3fba2",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c1569205",
+   "id": "2db52cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1245eaaf",
+   "id": "a306b6a6",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "35440598",
+   "id": "40eba0e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6e628d25",
+   "id": "b8cf0160",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "  {'inputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case',\n",
        "   'cloneMap': 'cloneMaps/RhineMeuse30min.map',\n",
        "   'landmask': 'None',\n",
-       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_162849',\n",
+       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_163752',\n",
        "   'spinUpOutputDir': 'True',\n",
        "   'institution': 'Department of Physical Geography, Utrecht University',\n",
        "   'title': 'PCR-GLOBWB output',\n",
@@ -300,22 +300,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5af443ae",
+   "id": "00df7a9a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started model container with working directory /home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_162849 and access to the following input directories:\n",
-      "/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_162849/pcrglobwb_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_162849'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_163752/pcrglobwb_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_163752'))"
       ]
      },
      "execution_count": 6,
@@ -324,14 +316,16 @@
     }
    ],
    "source": [
-    "cfg_file, cfg_dir = pcrglob.setup()\n",
+    "cfg_file, cfg_dir = pcrglob.setup(meteoOptions = {\n",
+    "  'temperatureNC': './temperature_2001to2010.nc',  # Copied from example dir to test overwrite\n",
+    "})\n",
     "cfg_file, cfg_dir"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "272cc6dc",
+   "id": "e0ec9c20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1b5a6181",
+   "id": "2b25114d",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94d16efb",
+   "id": "f920d6c0",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8841fcdc",
+   "id": "5e33fc59",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +878,7 @@
        "  * latitude   (latitude) float64 46.25 46.75 47.25 47.75 ... 51.25 51.75 52.25\n",
        "    time       object 2000-12-31 00:00:00\n",
        "Attributes:\n",
-       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-491538d6-0b78-4423-94ac-b9699019de03' class='xr-array-in' type='checkbox' checked><label for='section-491538d6-0b78-4423-94ac-b9699019de03' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-f050f1cd-f5b5-45bc-b68e-da47ac95d9e0' class='xr-array-in' type='checkbox' checked><label for='section-f050f1cd-f5b5-45bc-b68e-da47ac95d9e0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan, nan, nan, nan, nan, nan,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        nan, nan, nan, nan],\n",
@@ -909,9 +903,9 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0., nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan,  0.,  0.,  0.,  0., nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-8d4ed468-9644-4feb-8d79-a6ffbc353f3e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-8d4ed468-9644-4feb-8d79-a6ffbc353f3e' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-e70f2910-4119-4cbb-9a45-291729c36382' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e70f2910-4119-4cbb-9a45-291729c36382' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0b37176b-7bba-4f65-93c3-35c0dfbd5465' class='xr-var-data-in' type='checkbox'><label for='data-0b37176b-7bba-4f65-93c3-35c0dfbd5465' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
-       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-c7665104-d043-4537-8d1b-e500ebd3e588' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c7665104-d043-4537-8d1b-e500ebd3e588' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-040b138c-5e4c-44a2-bc09-e0f2428d9932' class='xr-var-data-in' type='checkbox'><label for='data-040b138c-5e4c-44a2-bc09-e0f2428d9932' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
-       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-6aff762c-6b0a-4b73-bff4-2e1eeefa5aec' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6aff762c-6b0a-4b73-bff4-2e1eeefa5aec' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e40dd9da-1879-493e-bb67-2ee138633103' class='xr-var-data-in' type='checkbox'><label for='data-e40dd9da-1879-493e-bb67-2ee138633103' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-060fe3d6-3d19-4cfe-ad80-7261c7710f49' class='xr-section-summary-in' type='checkbox'  checked><label for='section-060fe3d6-3d19-4cfe-ad80-7261c7710f49' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
+       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-bfe5cc18-4126-4d87-846c-7bf26b0623e9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-bfe5cc18-4126-4d87-846c-7bf26b0623e9' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-4006a763-0e4f-49fd-a673-2f2b734675bd' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4006a763-0e4f-49fd-a673-2f2b734675bd' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-400d2972-ccac-471f-a809-d16a939906cf' class='xr-var-data-in' type='checkbox'><label for='data-400d2972-ccac-471f-a809-d16a939906cf' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
+       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-0b676ece-8c60-4c91-a48f-54fa094eeea1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-0b676ece-8c60-4c91-a48f-54fa094eeea1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c5e03d78-5974-4268-96a2-a6d756dfaf06' class='xr-var-data-in' type='checkbox'><label for='data-c5e03d78-5974-4268-96a2-a6d756dfaf06' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
+       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-be100b0e-7c31-4b72-9254-0465759e78bc' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-be100b0e-7c31-4b72-9254-0465759e78bc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-59006667-c42d-4220-9b89-faa9be5a2474' class='xr-var-data-in' type='checkbox'><label for='data-59006667-c42d-4220-9b89-faa9be5a2474' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c335d774-eb4e-4081-94d1-9c47db09ed92' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c335d774-eb4e-4081-94d1-9c47db09ed92' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'discharge' (latitude: 13, longitude: 17)>\n",
@@ -961,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f9bba2a9",
+   "id": "8a00be26",
    "metadata": {},
    "outputs": [
     {
@@ -992,13 +986,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7c54b5cb",
+   "id": "637f4c8b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fb32a715100>"
+       "<matplotlib.collections.QuadMesh at 0x7f2a020f00d0>"
       ]
      },
      "execution_count": 12,
@@ -1026,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46b784b5",
+   "id": "826bbb07",
    "metadata": {},
    "outputs": [],
    "source": []
