update notebook text cells

--- a/examples/pcrglobwb.ipynb
+++ b/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ebf5ab2",
+   "id": "3c3e1cb8",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,20 +10,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ecb65c",
+   "id": "dbf84ae3",
    "metadata": {
     "tags": []
    },
    "source": [
     "This notebook assumes you have a working model configuration available on your system. We will use the example data from https://github.com/UU-Hydro/PCR-GLOBWB_input_example and we will user `ewatercycle.parametersetdb` to copy it to our local directory.\n",
     "\n",
-    "The default ini file contains a number of paths. Under `globalOptions`, the `input_dir` and `output_dir` will be overwritten on setup. All other paths must be relative to the `input_dir`, or they can be specified as absolute paths. If absolute paths are used in the config file, these directories must be passed during setup using the `additional_input_dirs` argument."
+    "We will combine them into one `PCRGloBWBParameterSet` object, which we can then pass to the model when we first create it."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "61780d2d",
+   "id": "5bd3f884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,20 +39,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "39aa25e3",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7c753165",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "This notebook uses the following docker and/or singularity images. Make sure these are present on the system:\n",
-    "\n",
-    "- Docker: `ewatercycle/pcrg-grpc4bmi:setters`\n",
-    "- Singularity: `ewatercycle-pcrg-grpc4bmi-setters.sif`\n"
+    "import ewatercycle\n",
+    "ewatercycle.CFG['container_engine'] = 'docker'  # or 'singularity'\n",
+    "ewatercycle.CFG['singularity_dir'] = './'\n",
+    "ewatercycle.CFG['output_dir'] = './'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9ad3fba2",
+   "execution_count": 2,
+   "id": "a734aff4",
    "metadata": {},
    "outputs": [
     {
@@ -74,19 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2db52cb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# My default is set to docker. To test with singularity:\n",
-    "# CFG['container_engine'] = 'singularity'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "a306b6a6",
+   "id": "073469b7",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "40eba0e0",
+   "id": "66dbe01d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b8cf0160",
+   "id": "2b27ab0e",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +119,7 @@
        "  {'inputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case',\n",
        "   'cloneMap': 'cloneMaps/RhineMeuse30min.map',\n",
        "   'landmask': 'None',\n",
-       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_163752',\n",
+       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_165234',\n",
        "   'spinUpOutputDir': 'True',\n",
        "   'institution': 'Department of Physical Geography, Utrecht University',\n",
        "   'title': 'PCR-GLOBWB output',\n",
@@ -300,14 +291,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "00df7a9a",
+   "id": "8d80f7d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_163752/pcrglobwb_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_163752'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_165234/pcrglobwb_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_165234'))"
       ]
      },
      "execution_count": 6,
@@ -316,6 +307,7 @@
     }
    ],
    "source": [
+    "# We can modify all settings above during the setup. Here's how to use a different forcing file\n",
     "cfg_file, cfg_dir = pcrglob.setup(meteoOptions = {\n",
     "  'temperatureNC': './temperature_2001to2010.nc',  # Copied from example dir to test overwrite\n",
     "})\n",
@@ -325,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e0ec9c20",
+   "id": "a36c4717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2b25114d",
+   "id": "066c7c4c",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f920d6c0",
+   "id": "49e5eb1b",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5e33fc59",
+   "id": "0bea8ea0",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +870,7 @@
        "  * latitude   (latitude) float64 46.25 46.75 47.25 47.75 ... 51.25 51.75 52.25\n",
        "    time       object 2000-12-31 00:00:00\n",
        "Attributes:\n",
-       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-f050f1cd-f5b5-45bc-b68e-da47ac95d9e0' class='xr-array-in' type='checkbox' checked><label for='section-f050f1cd-f5b5-45bc-b68e-da47ac95d9e0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-11f201ed-7c25-4125-a4dd-60f482f1cf20' class='xr-array-in' type='checkbox' checked><label for='section-11f201ed-7c25-4125-a4dd-60f482f1cf20' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan, nan, nan, nan, nan, nan,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        nan, nan, nan, nan],\n",
@@ -903,9 +895,9 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0., nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan,  0.,  0.,  0.,  0., nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-bfe5cc18-4126-4d87-846c-7bf26b0623e9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-bfe5cc18-4126-4d87-846c-7bf26b0623e9' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-4006a763-0e4f-49fd-a673-2f2b734675bd' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4006a763-0e4f-49fd-a673-2f2b734675bd' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-400d2972-ccac-471f-a809-d16a939906cf' class='xr-var-data-in' type='checkbox'><label for='data-400d2972-ccac-471f-a809-d16a939906cf' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
-       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-0b676ece-8c60-4c91-a48f-54fa094eeea1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-0b676ece-8c60-4c91-a48f-54fa094eeea1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c5e03d78-5974-4268-96a2-a6d756dfaf06' class='xr-var-data-in' type='checkbox'><label for='data-c5e03d78-5974-4268-96a2-a6d756dfaf06' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
-       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-be100b0e-7c31-4b72-9254-0465759e78bc' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-be100b0e-7c31-4b72-9254-0465759e78bc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-59006667-c42d-4220-9b89-faa9be5a2474' class='xr-var-data-in' type='checkbox'><label for='data-59006667-c42d-4220-9b89-faa9be5a2474' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c335d774-eb4e-4081-94d1-9c47db09ed92' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c335d774-eb4e-4081-94d1-9c47db09ed92' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
+       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-b88b7961-e48f-483c-8b4e-796940fab249' class='xr-section-summary-in' type='checkbox'  checked><label for='section-b88b7961-e48f-483c-8b4e-796940fab249' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-cd3ea74e-b44c-4c8d-b89b-67aff2461016' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-cd3ea74e-b44c-4c8d-b89b-67aff2461016' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-707c4452-5874-431f-9348-f9ce4950c367' class='xr-var-data-in' type='checkbox'><label for='data-707c4452-5874-431f-9348-f9ce4950c367' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
+       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-5f9a677e-0548-4d1e-9b7f-27319bab9bd6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5f9a677e-0548-4d1e-9b7f-27319bab9bd6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3e207caa-9e32-4e19-af8a-8691446920ff' class='xr-var-data-in' type='checkbox'><label for='data-3e207caa-9e32-4e19-af8a-8691446920ff' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
+       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-65dcce7a-5bc7-48f2-bdc4-1f4cf1500e6c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-65dcce7a-5bc7-48f2-bdc4-1f4cf1500e6c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-36b5b588-af6e-4022-8c33-e231b58b19eb' class='xr-var-data-in' type='checkbox'><label for='data-36b5b588-af6e-4022-8c33-e231b58b19eb' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-1e072707-afd5-4d85-a45c-dff843414a37' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1e072707-afd5-4d85-a45c-dff843414a37' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'discharge' (latitude: 13, longitude: 17)>\n",
@@ -955,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8a00be26",
+   "id": "72facaa2",
    "metadata": {},
    "outputs": [
     {
@@ -986,13 +978,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "637f4c8b",
+   "id": "d8135bc1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f2a020f00d0>"
+       "<matplotlib.collections.QuadMesh at 0x7f24827c5b80>"
       ]
      },
      "execution_count": 12,
@@ -1020,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826bbb07",
+   "id": "0e08ec73",
    "metadata": {},
    "outputs": [],
    "source": []
